# ak37e_lvgl8

./: CMakeLists.txt  README.md  ak37e.h  lv_conf.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  main.c  run.sh
ak37e/: ai.c  ai.h  ao.c  ao.h  base.c  base.h  vo.c  vo.h
work/: work.c  work.h
